@startuml
DecisionRequirementsEntity "1" -- "N" DecisionEntity

class     DecisionRequirementsEntity {
  id: String
  decisionRequirementsId: String
  name: String
  version: long
  resourceName: String
  xml: String
}

class     DecisionEntity {
  id: String
  decisionId: String
  name: String
  version: long
  decisionRequirementsId: String
  decisionRequirementsKey: long
}

note right of DecisionRequirementsEntity::decisionRequirementsId
  business id from the diagram
end note

note right of DecisionRequirementsEntity::id
  from key
end note

note right of DecisionEntity::id
  from key
end note

note right of DecisionEntity::decisionId
  business id from the diagram
end note

DecisionInstanceEntity o-- DesicionInstanceInputEntity
DecisionInstanceEntity o-- DecisionInstanceOutputEntity

class     DecisionInstanceEntity {
  id: String
  state: DecisionInstanceState
  evaluationDate: OffsetDateTime
  evaluationFailure: String
  position: long
  decisionRequirementsKey: long
  decisionRequirementsId: String
  processDefinitionKey: long
  processInstanceKey: long
  elementInstanceKey: long
  elementId: String
  decisionDefinitionId: long
  decisionId: String
  decisionName: String
  decisionType: DecisionType
  result: String
  evaluatedInputs: DesicionInstanceInputEntity[]
  evaluatedOutputs: DecisionInstanceOutputEntity[]
}

class DesicionInstanceInputEntity{
  id: String
  name: String
  value: String
}

class DecisionInstanceOutputEntity {
  ruleId: String
  ruleIndex: int
  id: String
  name: String
  value: String
}

note right of DecisionInstanceEntity::id
  Unique id for decision instance, is build as
  [key of the record]-[index of this instance
  in record's <i>decisionResults</i> list]
end note

note right of DecisionInstanceEntity::decisionId
  Similar to <i>bpmnProcessId</i>
end note

note right of DecisionInstanceEntity::result
  JSON
end note

note right of DesicionInstanceInputEntity::id
  From the diagram
end note

note right of DesicionInstanceInputEntity::value
  JSON
end note
@enduml